<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.cce.fazprotocolo.Activities.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:layout_gravity="center"
    android:id="@+id/login_layout"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <!-- Botão para a leitura de protocolos -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:padding="8dp"
        android:background="@color/colorButtons"
        android:text="@string/ler_prot"
        android:textColor="#000"
        android:onClick="ler"/>

    <ImageView
        android:id="@+id/logo_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="64dp"
        android:src="@mipmap/ic_launcher"/>

    <TextView
        android:id="@+id/text_principal_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/app_name"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="@color/Preto"
        android:gravity="center_horizontal"/>

    <!-- Edit text email -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textColorHint="#000">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/Ed_email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_marginRight="16dp"
            android:inputType="textEmailAddress"/>

    </android.support.design.widget.TextInputLayout>

    <!-- Edit text senha -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#000">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/Ed_senha_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/senha"
            android:layout_marginRight="16dp"
            android:inputType="textPassword"/>

    </android.support.design.widget.TextInputLayout>

    <!-- Botão para entrar no programa -->
    <Button
        android:id="@+id/bt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/entrar"
        android:background="@color/colorButtons"/>

    <!-- Botão para cadastrar -->
    <Button
        android:id="@+id/bt_cont_nova"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorBackground"
        android:text="@string/conta_nova"
        android:onClick="goCadastro"/>

</LinearLayout>