<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground">

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:src="@mipmap/ic_launcher"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp" />

    <TextView
        android:id="@+id/TextPrincipal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"    
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/esco_dep"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="@color/Preto" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32sp">

        <Button
            android:id="@+id/bt_inf"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:paddingLeft="64dp"
            android:gravity=""
            android:textColor="@color/colorButtons"
            android:background="@color/colorBackground"
            android:text="@string/info"
            android:onClick="vaiProtosInfo"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:paddingLeft="64dp"
            android:gravity=""
            android:textColor="@color/colorButtons"
            android:background="@color/colorBackground"
            android:text="@string/ca"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:paddingLeft="64dp"
            android:gravity=""
            android:textColor="@color/colorButtons"
            android:background="@color/colorBackground"
            android:text="@string/cc"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:paddingLeft="64dp"
            android:gravity=""
            android:textColor="@color/colorButtons"
            android:background="@color/colorBackground"
            android:text="@string/cf"/>

    </LinearLayout>



</LinearLayout>