<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.cce.fazprotocolo.Activities.CadastroActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:id="@+id/cadastro_layout"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo_cad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="48dp"
        android:src="@mipmap/ic_launcher"/>

    <TextView
        android:id="@+id/text_principal_cad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tela_cad"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="@color/Preto"
        android:gravity="center_horizontal"/>

    <!-- Edit text nome -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColorHint="#000">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/Ed_nome_cad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome"
            android:inputType="textPersonName|textCapWords"/>

    </android.support.design.widget.TextInputLayout>

    <!-- Edit text email -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColorHint="#000">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/Ed_email_cad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>

    </android.support.design.widget.TextInputLayout>

    <!-- Edit text quarto -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColorHint="#000">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/Ed_quarto_cad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quarto"
            android:inputType="number"/>

    </android.support.design.widget.TextInputLayout>

    <!-- Edit text senha -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColorHint="#000">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/Ed_senha_cad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/senha"
            android:inputType="textPassword"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/bt_cadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:background="@color/colorButtons"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/cadastrar"/>

</LinearLayout>
