<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:orientation="vertical"
    android:id="@+id/env_prot_activity"
    android:background="@color/colorBackground"
    tools:context="com.example.cce.fazprotocolo.Activities.EscreveProtocolo">

    <!-- Edit text assunto -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColorHint="#000">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/assunto_protcolo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/assunto"/>

    </android.support.design.widget.TextInputLayout>

    <!-- Edit text Corpo da mensagem -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="8dp"
        android:textColorHint="#000">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/corpo_protcolo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/texto"
            android:scrollbarAlwaysDrawVerticalTrack="true"/>

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <!-- Lista de departamentos para ser feito os protocolos -->
        <Spinner
            android:id="@+id/lista_deps_protocolo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"/>

        <Button
            android:id="@+id/bt_enviar_protocolo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/colorButtons"
            android:text="@string/enviar"/>



    </LinearLayout>

</LinearLayout>
